input group overflow fix
chatelő box

--- a/tutorial/hypeDemo/src/main/resources/public/CSS/chat.css
+++ b/tutorial/hypeDemo/src/main/resources/public/CSS/chat.css
@@ -268,6 +268,7 @@ a {
 #messageForm .input-group input {
     float: left;
     width: calc(100% - 85px);
+
 }
 
 #messageForm .input-group button {
@@ -380,7 +381,13 @@ a {
 }
 
 #messageArea {
-    max-height: 80%;
+    max-height: 72%;
+}
+
+@media screen and (max-width: 730px) {
+    #messageArea {
+        max-height: 77%;
+    }
 }
 
 .edit {
